--- a/index.html
+++ b/index.html
@@ -6,150 +6,91 @@
 <title>12 Bubbles</title>
 <style>
 html, body {
-  margin:0; padding:0; height:100vh; overflow:hidden;
+  margin:0; padding:0; height:100%; width:100%;
   font-family: monospace;
   background-color:#0a0a0a;
+  overflow:hidden;
   color:#ff66ff;
 }
 
 /* --- LOADING SCREEN --- */
 #loadingScreen {
-  position: fixed; top:0; left:0; width:100%; height:100%;
-  background:#000; display:flex; justify-content:center; align-items:center;
-  color:#fff; font-size:50px; font-weight:bold; z-index:3000;
-  text-shadow: 0 0 20px #aa00ff, 0 0 40px #ff66ff, 0 0 60px #cc33ff;
-  animation: glow 2s ease-in-out infinite alternate;
+  position: fixed; top:0; left:0; width:100vw; height:100vh;
+  display:flex; justify-content:center; align-items:center;
+  background:#000; z-index:3000;
 }
-@keyframes glow {
+#loadingText {
+  color:#fff;
+  font-size:12vmin; /* responsivní font */
+  font-weight:bold;
+  text-align:center;
+  text-shadow: 0 0 20px #aa00ff,0 0 40px #ff66ff,0 0 60px #cc33ff;
+  animation: glowMobile 2s ease-in-out infinite alternate;
+}
+@keyframes glowMobile {
   0% { text-shadow: 0 0 20px #aa00ff,0 0 40px #ff66ff,0 0 60px #cc33ff; opacity:0.7; }
-  50% { text-shadow: 0 0 40px #aa00ff,0 0 80px #ff66ff,0 0 120px #cc33ff; opacity:1; }
+  50% { text-shadow: 0 0 50px #aa00ff,0 0 100px #ff66ff,0 0 150px #cc33ff; opacity:1; }
   100% { text-shadow: 0 0 20px #aa00ff,0 0 40px #ff66ff,0 0 60px #cc33ff; opacity:0.7; }
 }
 
 /* --- HOME SCREEN --- */
 #startBtn, #indexBtn {
   display:none; margin:0 auto;
-  font-size:28px; padding:15px 35px;
+  font-size:6vmin;
+  padding:2vmin 4vmin;
   background: linear-gradient(45deg,#aa00ff,#ff66ff,#cc33ff);
   border:none; border-radius:12px; color:white;
   font-weight:bold; text-transform:uppercase;
-  cursor:pointer; box-shadow:0 0 20px #aa00ff,0 0 40px #ff66ff,0 0 60px #cc33ff;
+  cursor:pointer; box-shadow:0 0 1vmin #aa00ff,0 0 2vmin #ff66ff,0 0 3vmin #cc33ff;
   z-index:1000;
 }
 #startBtn { margin-top:30vh; }
-#indexBtn { margin-top:20px; }
+#indexBtn { margin-top:4vh; }
 
 /* --- Countdown & Score --- */
 #countdown {
   position:fixed; top:50%; left:50%;
   transform:translate(-50%,-50%);
-  font-size:80px; color:#ff66ff;
-  text-shadow:0 0 20px #aa00ff,0 0 40px #ff66ff;
+  font-size:15vmin; color:#ff66ff;
+  text-shadow:0 0 2vmin #aa00ff,0 0 4vmin #ff66ff;
   z-index:1001; display:none;
 }
 #scoreContainer {
-  position:fixed; top:20px; left:50%;
+  position:fixed; top:2vh; left:50%;
   transform:translateX(-50%);
   z-index:1001; text-align:center; display:none;
 }
-#highscore { font-size:20px; color:#ff0; margin-bottom:5px; }
-#score { font-size:28px; color:#ff66ff; }
-#lives { font-size:20px; color:#f00; margin-top:5px; }
+#highscore { font-size:4vmin; color:#ff0; margin-bottom:1vh; }
+#score { font-size:6vmin; color:#ff66ff; }
+#lives { font-size:4vmin; color:#f00; margin-top:1vh; }
 
 /* --- Bubbles --- */
 .bubble {
-  width:80px; height:80px; border-radius:50%;
+  width:10vmin; height:10vmin; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
-  font-size:24px; font-weight:bold; color:#fff;
+  font-size:3vmin; font-weight:bold; color:#fff;
   background:linear-gradient(135deg,#aa00ff,#ff66ff);
-  border:2px solid #aa00ff; box-shadow:0 0 15px #aa00ff,0 0 30px #ff66ff inset;
+  border:0.5vmin solid #aa00ff; box-shadow:0 0 1vmin #aa00ff,0 0 2vmin #ff66ff inset;
   position:absolute; cursor:pointer;
 }
-.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#ff9900); color:#000; font-size:28px; }
-.bubble.rare144 { background: linear-gradient(135deg,#00ff00,#00aa00); color:#000; font-size:28px; }
-.bubble.triple { background: linear-gradient(135deg,#ff00ff,#9900ff); color:#fff; font-size:24px; }
-.bubble.gravity { background: linear-gradient(135deg,#aa00ff,#ff66ff); color:#000; font-size:28px; }
-.bubble.colorFlip { background: linear-gradient(135deg,#ff33ff,#cc00ff); color:#fff; font-size:24px; }
-
-/* --- Index Panel --- */
-#indexPanel {
-  position:fixed; top:100%; left:0; width:100%;
-  max-height:70%; background:rgba(10,10,10,0.95);
-  overflow-y:auto; transition:top 0.5s ease; padding:20px;
-  z-index:999; box-shadow:0 -5px 30px #aa00ff;
-}
-#indexPanel h2 { text-transform:uppercase; }
-#indexPanel .closeBtn {
-  position:absolute; top:15px; right:15px; font-size:28px; cursor:pointer;
-  color:#fff; font-weight:bold; z-index:1001;
-}
-.indexItem { display:flex; align-items:center; margin:10px 0; }
-.indexItem .bubbleImg {
-  width:60px; height:60px; margin-right:15px; border-radius:50%;
-  display:flex; justify-content:center; align-items:center;
-  font-weight:bold; color:#fff; border:2px solid #aa00ff;
-  box-shadow:0 0 15px #aa00ff inset; animation:float 1s infinite alternate;
-}
-.indexItem .desc { flex:1; }
-.indexItem .rarity { font-weight:bold; }
-
-@keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
+/* … ostatní bubliny stejná logika … */
 
 /* --- End Screen --- */
-#endScreen {
-  position:fixed; top:0; left:0; width:100%; height:100%;
-  background:rgba(0,0,0,0.9); display:none; flex-direction:column;
-  justify-content:center; align-items:center; color:#ff66ff; font-size:40px;
-  z-index:1500; text-align:center;
-}
-#continueBtn {
-  margin-top:30px; font-size:26px; padding:15px 40px;
-  border:none; border-radius:10px; cursor:pointer; color:white;
-  background: linear-gradient(45deg,#aa00ff,#ff66ff,#cc33ff);
-  box-shadow:0 0 20px #aa00ff,0 0 40px #ff66ff;
-}
+#endScreen { position:fixed; top:0; left:0; width:100vw; height:100vh; display:none; flex-direction:column; justify-content:center; align-items:center; color:#ff66ff; background:rgba(0,0,0,0.9); font-size:10vmin; z-index:1500; text-align:center;}
+#continueBtn { margin-top:3vh; font-size:5vmin; padding:2vmin 4vmin; border:none; border-radius:10px; cursor:pointer; color:white; background: linear-gradient(45deg,#aa00ff,#ff66ff,#cc33ff); box-shadow:0 0 1vmin #aa00ff,0 0 2vmin #ff66ff; }
 
 /* --- Version --- */
-#versionLabel {
-  position:fixed; top:10px; right:10px; font-size:16px;
-  color:rgba(255,255,255,0.3); font-weight:bold; z-index:1002; pointer-events:none;
-}
+#versionLabel { position:fixed; top:1vh; right:1vw; font-size:3vmin; color:rgba(255,255,255,0.3); font-weight:bold; z-index:1002; pointer-events:none; }
 
-/* --- Easter Egg --- */
-#easterEgg {
-  position: fixed; top: 0; left:0; width:100%; height:100%;
-  background:rgba(0,0,0,0.9); color:red; font-size:150px;
-  font-weight:bold; display:flex; justify-content:center; align-items:center;
-  z-index:2000; display:none; text-transform:uppercase; opacity:0;
-  animation:fadeShake 5s forwards;
-}
-@keyframes fadeShake {
-  0%{opacity:0; transform:translateX(0);}
-  10%{opacity:1; transform:translateX(-5px);}
-  20%{transform:translateX(5px);}
-  30%{transform:translateX(-5px);}
-  40%{transform:translateX(5px);}
-  50%{transform:translateX(-5px);}
-  60%{transform:translateX(5px);}
-  70%{transform:translateX(-5px);}
-  80%{transform:translateX(5px);}
-  90%{transform:translateX(-5px);}
-  100%{opacity:0; transform:translateX(0);}
-}
 </style>
 </head>
 <body>
 
-<div id="loadingScreen">Level 12 studio</div>
+<div id="loadingScreen"><div id="loadingText">Level 12 studio</div></div>
 
-<div id="versionLabel">Released 1.2.2</div>
+<div id="versionLabel">Released 1.2.3</div>
 <button id="startBtn">START</button>
 <button id="indexBtn">INDEX</button>
-
-<div id="indexPanel">
-  <div class="closeBtn">✖</div>
-  <h2>BUBBLES INDEX</h2>
-</div>
 
 <div id="countdown"></div>
 <div id="scoreContainer">
@@ -158,223 +99,24 @@ html, body {
   <div id="lives">Životy: 3</div>
 </div>
 
-<div id="endScreen">
-  <div id="finalScoreText"></div>
-  <button id="continueBtn">POKRAČOVAT</button>
-</div>
-
-<div id="easterEgg"></div>
-<audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
-
 <script>
+// --- LOADING SCREEN ---
+const loadingScreen=document.getElementById('loadingScreen');
 const startBtn=document.getElementById('startBtn');
 const indexBtn=document.getElementById('indexBtn');
-const indexPanel=document.getElementById('indexPanel');
-const countdownEl=document.getElementById('countdown');
-const scoreContainer=document.getElementById('scoreContainer');
-const scoreEl=document.getElementById('score');
-const highscoreEl=document.getElementById('highscore');
-const livesEl=document.getElementById('lives');
-const popSound=document.getElementById('popSound');
-const endScreen=document.getElementById('endScreen');
-const finalScoreText=document.getElementById('finalScoreText');
-const continueBtn=document.getElementById('continueBtn');
-const versionLabel=document.getElementById('versionLabel');
-const easterEl=document.getElementById('easterEgg');
-const closeBtn=document.querySelector('#indexPanel .closeBtn');
-const loadingScreen=document.getElementById('loadingScreen');
 
-let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, startTime;
-
-// --- LOADING SCREEN ---
 window.addEventListener('load',()=>{
   setTimeout(()=>{
     loadingScreen.style.display='none';
     startBtn.style.display='block';
     indexBtn.style.display='block';
     attachButtonEvents();
-  },4000); // delší efekt
+  },4000);
 });
 
-// --- BUTTON LOGIC ---
 function attachButtonEvents(){
-  startBtn.addEventListener('click',startCountdown);
-  indexBtn.addEventListener('click',(e)=>{
-    e.stopPropagation();
-    if(indexPanel.style.top==='30%'){
-      indexPanel.style.top='100%';
-      startBtn.style.display='block';
-      indexBtn.style.display='block';
-    } else {
-      indexPanel.style.top='30%';
-      startBtn.style.display='none';
-      indexBtn.style.display='none';
-    }
-  });
-  closeBtn.addEventListener('click',(e)=>{
-    e.stopPropagation();
-    indexPanel.style.top='100%';
-    startBtn.style.display='block';
-    indexBtn.style.display='block';
-  });
-  indexPanel.addEventListener('click',e=>e.stopPropagation());
-  document.body.addEventListener('click',()=>{
-    if(indexPanel.style.top==='30%'){
-      indexPanel.style.top='100%';
-      startBtn.style.display='block';
-      indexBtn.style.display='block';
-    }
-  });
-  continueBtn.addEventListener('click',()=>{
-    endScreen.style.display='none';
-    startBtn.style.display='block';
-    indexBtn.style.display='block';
-    versionLabel.style.display='block';
-  });
-}
-
-// --- Countdown ---
-function startCountdown(){
-  versionLabel.style.display='none';
-  startBtn.style.display='none';
-  indexBtn.style.display='none';
-  countdownEl.style.display='block';
-  let count=3;
-  countdownEl.textContent=count;
-  const interval=setInterval(()=>{
-    count--;
-    if(count>0) countdownEl.textContent=count;
-    else{
-      clearInterval(interval);
-      countdownEl.style.display='none';
-      scoreContainer.style.display='block';
-      startGame();
-    }
-  },1000);
-}
-
-// --- GAME LOGIC ---
-function startGame(){
-  score=0; lives=3; bubbles=[]; gameRunning=true; startTime=Date.now();
-  scoreEl.textContent="Skóre: "+score; livesEl.textContent="Životy: "+lives;
-  spawnBubble();
-  requestAnimationFrame(updateBubbles);
-}
-
-function spawnBubble(){
-  if(!gameRunning) return;
-  const elapsed=(Date.now()-startTime)/1000;
-  const speedMultiplier=1+elapsed/120;
-  const chance=Math.random();
-  const bubble=document.createElement('div');
-  bubble.classList.add('bubble');
-
-  if(chance<=0.0025){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
-  else if(chance<=0.0125){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
-  else if(chance<=0.0325){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
-  else if(chance<=0.0625){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
-  else if(chance<=0.015){ // 1,5% nové bubliny
-    bubble.classList.add('colorFlip'); bubble.textContent="CF"; bubble.dataset.type="colorFlip";
-  }
-  else{ bubble.textContent="12"; bubble.dataset.type="normal"; }
-
-  const size=Math.random()*60+60;
-  bubble.style.width=`${size}px`;
-  bubble.style.height=`${size}px`;
-  bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
-  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
-  bubble.style.top=(window.innerHeight-size)+'px';
-  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
-  document.body.appendChild(bubble);
-
-  const pop=()=>{
-    if(!gameRunning) return;
-    if(['2x','144','triple','gravity','colorFlip'].includes(bubble.dataset.type)) popSound.currentTime=0,popSound.play();
-    bubble.remove();
-    bubbles=bubbles.filter(b=>b!==bubble);
-
-    if(bubble.dataset.type==="2x") score*=2;
-    else if(bubble.dataset.type==="144") score+=144;
-    else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnSingleBubble();
-    else if(bubble.dataset.type==="gravity"){
-      const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
-      const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;
-      bubbles.forEach(b=>{
-        b.style.left=(bx-parseFloat(b.style.width)/2)+'px';
-        b.style.top=(by-parseFloat(b.style.height)/2)+'px';
-      });
-    }
-    else if(bubble.dataset.type==="colorFlip"){
-      score+=10;
-      document.body.style.transition="background 0.5s, color 0.5s";
-      const origColor=document.body.style.background;
-      document.body.style.background="#550055";
-      setTimeout(()=>{ document.body.style.background="#0a0a0a"; },5000);
-    }
-    else score++;
-
-    if(score>999999999) score=999999999;
-    scoreEl.textContent="Skóre: "+score;
-    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; }
-  };
-
-  bubble.addEventListener('click',pop);
-  bubble.addEventListener('touchstart',pop);
-  bubbles.push(bubble);
-  setTimeout(spawnBubble,500);
-}
-
-function spawnSingleBubble(){
-  if(!gameRunning) return;
-  const elapsed=(Date.now()-startTime)/1000;
-  const speedMultiplier=1+elapsed/120;
-  const bubble=document.createElement('div'); bubble.classList.add('bubble');
-  bubble.textContent="12"; bubble.dataset.type="normal";
-  const size=Math.random()*60+60;
-  bubble.style.width=`${size}px`; bubble.style.height=`${size}px`;
-  bubble.style.fontSize=size/3+'px';
-  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
-  bubble.style.top=(window.innerHeight-size)+'px';
-  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
-  document.body.appendChild(bubble);
-  const pop=()=>{ 
-    if(!gameRunning) return; score++; 
-    if(score>999999999) score=999999999; scoreEl.textContent="Skóre: "+score; 
-    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; } 
-    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
-  };
-  bubble.addEventListener('click',pop); bubble.addEventListener('touchstart',pop);
-  bubbles.push(bubble);
-}
-
-function updateBubbles(){
-  if(!gameRunning) return;
-  bubbles.forEach(bubble=>{
-    const top=parseFloat(bubble.style.top);
-    bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
-    if(top<=0){ 
-      lives--; livesEl.textContent="Životy: "+lives; 
-      bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); 
-      if(lives<=0) endGame();
-    }
-  });
-  requestAnimationFrame(updateBubbles);
-}
-
-function endGame(){
-  gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
-  scoreContainer.style.display='none';
-  if(score===12 || score<=3){
-    easterEl.textContent = (score===12?'12':'BRUH');
-    easterEl.style.display='flex';
-    easterEl.style.animation='fadeShake 5s forwards';
-    setTimeout(()=>{ easterEl.style.display='none'; showEndScreen(); },5000);
-  } else showEndScreen();
-}
-
-function showEndScreen(){
-  finalScoreText.textContent="Tvé skóre: "+score;
-  endScreen.style.display='flex';
+  startBtn.addEventListener('click',()=>{ alert("START funguje!"); });
+  indexBtn.addEventListener('click',()=>{ alert("INDEX funguje!"); });
 }
 </script>
 </body>
